--- a/src/app.scss
+++ b/src/app.scss
@@ -1,13 +1,14 @@
 @import '@fontsource/fira-mono';
 @import url('https://fonts.googleapis.com/css2?family=League+Gothic&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 $tigresBlue: #1f415d;
 $tigresOrange: #e99530;
 $tigresGrey: #b3b3b3;
 $white: #ffffff;
+$linkColor: #0000ee;
 
 :root {
-	font-family: Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
-		Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	font-family: 'Roboto', Times New Roman, serif;
 	--font-mono: 'Fira Mono', monospace;
 	--pure-white: #ffffff;
 
@@ -15,29 +16,32 @@ $white: #ffffff;
 	--column-margin-top: 4rem;
 }
 
-body {
+body,
+div#app {
 	min-height: 100vh;
 	min-width: 100vw;
 	margin: 0;
 	background-color: $tigresBlue;
 }
 
+div#app {
+	display: flex;
+	flex-direction: column;
+}
+
 h1,
-h2 {
+h2,
+h3 {
 	font-family: 'League Gothic', Arial;
 }
 
 h1 {
 	font-weight: 400;
-	color: $tigresOrange;
-}
-
-p {
-	line-height: 1.5;
+	color: $white;
 }
 
 a {
-	color: var(--accent-color);
+	color: $linkColor;
 	text-decoration: none;
 }
 
